--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@ function renderList(rows) {
           <input type="date" id="dateTo" onchange="recomputeView()">
         </div>
       
-        <button onclick="toggleDateSort()" id="sortBtn">
+        <button onclick="toggleDateSort()" id="sortBtn"
           style="padding:8px 12px;border-radius:8px;border:1px solid #ccc;background:#fff;cursor:pointer">
           📅 Najnowsze
         </button>
